# yourdb

./: .gitignore  LICENSE  MANIFEST.in  Readme.md  fetch_test.py  main.py  pyproject.toml  tempCodeRunnerFile.py
concurrency_db.yourdb/test_items/: schema.json
concurrency_stress_db.yourdb/test_items/: schema.json
fetch_benchmark_db.yourdb/employees/: schema.json
fetch_test_db.yourdb/employees/: schema.json
final_fetch_db.yourdb/employees/: schema.json
final_insert_db.yourdb/employees/: schema.json
optimization_test_db.yourdb/inventory/: schema.json
performance_test_db.yourdb/users/: schema.pkl  users_shard_0.entity  users_shard_1.entity  users_shard_2.entity  users_shard_3.entity  users_shard_4.entity  users_shard_5.entity  users_shard_6.entity  users_shard_7.entity  users_shard_8.entity  users_shard_9.entity
pickle_insert_benchmark_db.yourdb/employees/: schema.json
test_db.yourdb/users/: schema.json
test_files/: advanced_query_test.py  concurrency_test.py  evolution_test.py  fetch_test.py  inconsistencies_demo.py  main.py  main_2.py  optimization_test.py
yourdb/: __init__.py  compaction.py  entity.py  locking.py  utils.py  yourdb.py
yourdb/yourdb/: entity.py
