[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yourdb"
version = "0.1.0"
description = "A Python-native object database"
readme = "README.md"
authors = [
    { name="Dhruv Verma", email="engdhruv25@example.com" },
    { name="Aayushman Gupta", email="aayushmangupta780@example.com" }
]
license = { text="MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Dhruv251004/yourdb"
